--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ input, select {
 
 <!-- ================= FORM ================= -->
 <div id="formBox">
-  <h3 id="formTitle">ฟอร์มจองรถ</h3>
+  <h3 id="formTitle">กรอกข้อมูลการจองให้ครบถ้วน</h3>
 
   <input type="date" id="booking_date">
   <input type="time" id="booking_time">
@@ -72,10 +72,11 @@ input, select {
   <button class="secondary" onclick="closeForm()">ยกเลิก</button>
 </div>
 
+<!-- ================= HISTORY ================= -->
 <div id="historyBox"></div>
 
 <script>
-const ENDPOINT = "https://script.google.com/macros/s/AKfycbxLKUtFzlGibYUUyMxfNM6TYRWLiTK3FaXGPEouAC9uBKcnzLBe2RqWRfl0EOjeiCZ_ww/exec";   // 🔴 ใส่ URL ของคุณ
+const ENDPOINT = "https://script.google.com/macros/s/AKfycbxLKUtFzlGibYUUyMxfNM6TYRWLiTK3FaXGPEouAC9uBKcnzLBe2RqWRfl0EOjeiCZ_ww/exec";
 let userId = "";
 let role = "";
 let mobile = "";
@@ -141,11 +142,12 @@ function render() {
   mainBtn.onclick = showForm;
 
   subBtn.innerText = "ดูประวัติ";
-  subBtn.onclick = () => alert("TODO: หน้าประวัติการจอง");
+  subBtn.onclick = showHistory; // === ADD ===
 }
 
 function showForm() {
   document.getElementById("formBox").style.display = "block";
+  document.getElementById("historyBox").style.display = "none";
   document.getElementById("contact_mobile").value = mobile;
 }
 
@@ -193,6 +195,96 @@ async function submitBooking() {
     alert("เกิดข้อผิดพลาด");
   }
 }
+
+/* ================= HISTORY LOGIC (ADD) ================= */
+
+async function showHistory() {
+  document.getElementById("formBox").style.display = "none";
+  historyBox.style.display = "block";
+  historyBox.innerHTML = "<h3>ประวัติการจอง</h3><div>กำลังโหลด...</div>";
+
+  const res = await fetch(ENDPOINT,{
+    method:"POST",
+    body:JSON.stringify({
+      action:"get_my_bookings",
+      line_user_id:userId
+    })
+  }).then(r=>r.json());
+
+  if (!res.success || !Array.isArray(res.data)) {
+    historyBox.innerHTML = "<div>ไม่พบข้อมูล</div>";
+    return;
+  }
+
+  renderHistory(res.data);
+}
+
+function renderHistory(bookings) {
+  const today = new Date().toISOString().slice(0,10);
+  let active = [];
+  let past = [];
+
+  bookings.forEach(b => {
+    if (role === "driver") {
+      const related =
+        b.driver_id === userId ||
+        b.driver_name === displayName ||
+        b.created_by === userId;
+      if (!related) return;
+    }
+
+    if (b.booking_date >= today) active.push(b);
+    else past.push(b);
+  });
+
+  historyBox.innerHTML = `
+    <h3>งานที่กำลังดำเนินการ</h3>
+    ${active.length ? active.map(renderBooking).join("") : "<div>ไม่มีงาน</div>"}
+    <hr style="margin:16px 0">
+    <h3>งานที่ผ่านมาแล้ว</h3>
+    ${past.length ? past.map(renderBooking).join("") : "<div>ไม่มีงาน</div>"}
+    <button class="secondary" onclick="closeHistory()">ปิด</button>
+  `;
+}
+
+function renderBooking(b) {
+  return `
+    <div style="background:#fff;padding:12px;border-radius:10px;margin-bottom:10px">
+      <div><b>วันที่:</b> ${b.booking_date} ${b.booking_time}</div>
+      <div><b>เส้นทาง:</b> ${b.pickup_location} → ${b.dropoff_location}</div>
+      <div><b>รถ:</b> ${b.vehicle_type} | <b>ผู้โดยสาร:</b> ${b.passenger_count}</div>
+      <button class="danger" onclick="cancelBooking('${b.booking_id}')">
+        ยกเลิกงาน
+      </button>
+    </div>
+  `;
+}
+
+async function cancelBooking(id) {
+  if (!confirm("ยืนยันยกเลิกงานนี้?")) return;
+
+  const res = await fetch(ENDPOINT,{
+    method:"POST",
+    body:JSON.stringify({
+      action:"cancel_booking",
+      booking_id:id,
+      line_user_id:userId
+    })
+  }).then(r=>r.json());
+
+  if (res.success) {
+    alert("ยกเลิกงานเรียบร้อย");
+    showHistory();
+  } else {
+    alert("ไม่สามารถยกเลิกงานได้");
+  }
+}
+
+function closeHistory() {
+  historyBox.style.display = "none";
+}
+
+/* ================= DRIVER ================= */
 
 async function registerDriver() {
   const m = prompt("กรุณาระบุเบอร์โทร");
@@ -247,8 +339,6 @@ async function cancelDriverRole() {
     })
   }).then(r=>r.json());
 
-  console.log("cancel_driver response:", res); // 🔍 debug
-
   if (res.success === true || res.status === "success") {
     alert("ยกเลิกบทบาทเรียบร้อย");
     location.reload();
@@ -256,7 +346,6 @@ async function cancelDriverRole() {
     alert("ไม่สามารถยกเลิกได้");
   }
 }
-
 
 init();
 </script>
