--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ function render() {
   mainBtn.onclick = showForm;
 
   subBtn.innerText = "ดูประวัติ";
-  subBtn.onclick = showHistory; // === ADD ===
+  subBtn.onclick = showHistory;
 }
 
 function showForm() {
@@ -155,48 +155,7 @@ function closeForm() {
   document.getElementById("formBox").style.display = "none";
 }
 
-function isEmpty(v) {
-  return !v || v.toString().trim() === "";
-}
-
-async function submitBooking() {
-  if (isEmpty(booking_date.value)) return alert("กรุณาเลือกวันที่");
-  if (isEmpty(booking_time.value)) return alert("กรุณาเลือกเวลา");
-  if (isEmpty(vehicle_type.value)) return alert("กรุณาเลือกประเภทรถ");
-  if (isEmpty(passenger_count.value) || passenger_count.value <= 0)
-    return alert("กรุณาระบุจำนวนผู้โดยสาร");
-  if (isEmpty(pickup_location.value)) return alert("กรุณาระบุจุดรับ");
-  if (isEmpty(dropoff_location.value)) return alert("กรุณาระบุจุดส่ง");
-  if (isEmpty(contact_mobile.value)) return alert("กรุณาระบุเบอร์ติดต่อ");
-
-  const action =
-    role === "driver" ? "driver_create_booking" : "create_booking";
-
-  const res = await fetch(ENDPOINT,{
-    method:"POST",
-    body:JSON.stringify({
-      action,
-      line_user_id: userId,
-      driver_name: displayName,
-      booking_date: booking_date.value,
-      booking_time: booking_time.value,
-      vehicle_type: vehicle_type.value,
-      passenger_count: passenger_count.value,
-      pickup_location: pickup_location.value.trim(),
-      dropoff_location: dropoff_location.value.trim(),
-      contact_mobile: contact_mobile.value.trim()
-    })
-  }).then(r=>r.json());
-
-  if (res.success) {
-    alert("บันทึกเรียบร้อย");
-    location.reload();
-  } else {
-    alert("เกิดข้อผิดพลาด");
-  }
-}
-
-/* ================= HISTORY LOGIC (ADD) ================= */
+/* ================= HISTORY LOGIC ================= */
 
 async function showHistory() {
   document.getElementById("formBox").style.display = "none";
@@ -211,12 +170,17 @@ async function showHistory() {
     })
   }).then(r=>r.json());
 
-  if (!res.success || !Array.isArray(res.data)) {
+  // 🔧 FIX: รองรับหลายรูปแบบ response
+  let bookings = [];
+  if (Array.isArray(res)) bookings = res;
+  else if (Array.isArray(res.data)) bookings = res.data;
+
+  if (!bookings.length) {
     historyBox.innerHTML = "<div>ไม่พบข้อมูล</div>";
     return;
   }
 
-  renderHistory(res.data);
+  renderHistory(bookings);
 }
 
 function renderHistory(bookings) {
@@ -260,91 +224,8 @@ function renderBooking(b) {
   `;
 }
 
-async function cancelBooking(id) {
-  if (!confirm("ยืนยันยกเลิกงานนี้?")) return;
-
-  const res = await fetch(ENDPOINT,{
-    method:"POST",
-    body:JSON.stringify({
-      action:"cancel_booking",
-      booking_id:id,
-      line_user_id:userId
-    })
-  }).then(r=>r.json());
-
-  if (res.success) {
-    alert("ยกเลิกงานเรียบร้อย");
-    showHistory();
-  } else {
-    alert("ไม่สามารถยกเลิกงานได้");
-  }
-}
-
 function closeHistory() {
   historyBox.style.display = "none";
-}
-
-/* ================= DRIVER ================= */
-
-async function registerDriver() {
-  const m = prompt("กรุณาระบุเบอร์โทร");
-  if (!m) return;
-
-  const res = await fetch(ENDPOINT,{
-    method:"POST",
-    body:JSON.stringify({
-      action:"register_driver",
-      line_user_id:userId,
-      mobile_phone:m
-    })
-  }).then(r=>r.json());
-
-  if (res.success) {
-    alert("ลงทะเบียนเป็นพนักงานขับรถแล้ว");
-    location.reload();
-  } else {
-    alert("เบอร์โทรไม่ถูกต้อง (ต้องขึ้นต้นด้วย 0)");
-  }
-}
-
-async function editDriverMobile() {
-  const m = prompt("กรุณาระบุเบอร์โทรใหม่");
-  if (!m) return;
-
-  const res = await fetch(ENDPOINT,{
-    method:"POST",
-    body:JSON.stringify({
-      action:"register_driver",
-      line_user_id:userId,
-      mobile_phone:m
-    })
-  }).then(r=>r.json());
-
-  if (res.success) {
-    alert("อัปเดตเบอร์โทรเรียบร้อย");
-    location.reload();
-  } else {
-    alert("เบอร์โทรไม่ถูกต้อง");
-  }
-}
-
-async function cancelDriverRole() {
-  if (!confirm("ยืนยันยกเลิกบทบาทพนักงานขับรถ?")) return;
-
-  const res = await fetch(ENDPOINT,{
-    method:"POST",
-    body:JSON.stringify({
-      action:"cancel_driver",
-      line_user_id:userId
-    })
-  }).then(r=>r.json());
-
-  if (res.success === true || res.status === "success") {
-    alert("ยกเลิกบทบาทเรียบร้อย");
-    location.reload();
-  } else {
-    alert("ไม่สามารถยกเลิกได้");
-  }
 }
 
 init();
