--- a/index.html
+++ b/index.html
@@ -227,7 +227,25 @@ function renderBooking(b) {
 function closeHistory() {
   historyBox.style.display = "none";
 }
+async function cancelBooking(id) {
+  if (!confirm("ยืนยันยกเลิกงานนี้?")) return;
 
+  const res = await fetch(ENDPOINT, {
+    method: "POST",
+    body: JSON.stringify({
+      action: "cancel_booking",
+      booking_id: id,
+      line_user_id: userId
+    })
+  }).then(r => r.json());
+
+  if (res.success) {
+    alert("ยกเลิกงานเรียบร้อย");
+    showHistory(); // refresh ประวัติ
+  } else {
+    alert("ไม่สามารถยกเลิกงานได้");
+  }
+}
 init();
 </script>
 
